force-app/main/default/objects/Mascota__c/Mascota__c.object-meta.xml
<CustomObject>
    <label>Mascota</label>
    <nameField>
        <label>Mascota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mascota</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>