force-app/main/default/objects/Mascota__c/fields/Especie__c.field-meta.xml
<CustomField>
    <fullName>Especie__c</fullName>
    <description>Especie de la mascota (ej. Perro, Gato)</description>
    <inlineHelpText>Selecciona la especie de la mascota de la lista</inlineHelpText>
    <label>Especie</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perro</fullName>
            </value>
            <value>
                <fullName>Gato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>