force-app/main/default/objects/Mascota__c/fields/Fecha_de_la_proxima_vacunacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_proxima_vacunacion__c</fullName>
    <description>Fecha en la que está programada la próxima vacunación de la mascota</description>
    <inlineHelpText>Ingrese la fecha en la que se espera la próxima vacunación de la mascota.</inlineHelpText>
    <label>Fecha de la próxima vacunación</label>
    <required>true</required>
    <type>Date</type>
</CustomField>