force-app/main/default/objects/Mascota__c/fields/Fecha_de_la_ultima_vacunacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_ultima_vacunacion__c</fullName>
    <description>Fecha en la que se realizó la última vacunación de la mascota.</description>
    <inlineHelpText>Ingrese la fecha en que se administró la última vacuna a la mascota.</inlineHelpText>
    <label>Fecha de la última vacunación</label>
    <required>true</required>
    <type>Date</type>
</CustomField>