force-app/main/default/objects/Mascota__c/fields/Raza__c.field-meta.xml
<CustomField>
    <fullName>Raza__c</fullName>
    <description>Campo para seleccionar la raza de la mascota</description>
    <inlineHelpText>Selecciona la raza de la mascota según su especie.</inlineHelpText>
    <label>Raza</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Especie__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mestizo</fullName>
            </value>
            <value>
                <fullName>Caniche</fullName>
            </value>
            <value>
                <fullName>Siamés</fullName>
            </value>
            <value>
                <fullName>Persa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>